Optimization and weather

--- a/Optimization/optimization.ipynb
+++ b/Optimization/optimization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -41,299 +41,104 @@
        "'9.0'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# check the version\n",
+    "# check the version if 8.X then convert it using E+\n",
     "ep.get_idf_version(building)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Cast Concrete (Dense)_.1',\n",
+       " 'Gypsum Plasterboard_.O25',\n",
+       " 'Brickwork Outer_.1',\n",
+       " 'XPS Extruded Polystyrene  - CO2 Blowing_.O792',\n",
+       " 'Concrete Block (Medium)_.1',\n",
+       " 'Gypsum Plastering_.O13']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get a list of the Name property of all IDF objects of class MATERIAL\n",
+    "[materials.Name for materials in building.idfobjects[\"MATERIAL\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Parameter(name='North Axis', selector=FieldSelector(field_name='North Axis', object_name='Building'), value_descriptor=RangeParameter(min=0, max=359))]\n"
+      "[Parameter(name='North Axis', selector=FieldSelector(field_name='North Axis', object_name='Building'), value_descriptor=RangeParameter(min=0, max=359)), Parameter(name='Window to Wall Ratio', selector=wwrSelector(), value_descriptor=RangeParameter(min=0.1, max=0.9)), Parameter(name='Insulation Thickness', selector=FieldSelector(field_name='Thickness', class_name='Material', object_name='XPS Extruded Polystyrene  - CO2 Blowing_.O792'), value_descriptor=RangeParameter(min=0.01, max=0.99))]\n"
      ]
     }
    ],
    "source": [
-    "# Set up evaluator\n",
+    "## Set up evaluator\n",
+    "# Parameter Space\n",
     "parameters = []\n",
     "parameters = expand_plist( # Use helper function to make parameter list\n",
     "    {'Building':                      # Name from IDF Building object\n",
     "          {'North Axis':(0,359)}}     # Change orientation from North\n",
     "    )\n",
+    "\n",
+    "parameters.append(wwr(RangeParameter(0.1,0.9)))\n",
+    "\n",
+    "zero_to_one_exclusive = RangeParameter(min_val = 0.01, max_val=0.99) # TODO change parameters\n",
+    "\n",
+    "insulation = FieldSelector(class_name='Material', object_name='XPS Extruded Polystyrene  - CO2 Blowing_.O792', field_name='Thickness')\n",
+    "parameters.append(Parameter(selector=insulation,value_descriptor=zero_to_one_exclusive,name='Insulation Thickness'))  # the name is just for readability\n",
+    "\n",
     "print(parameters)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "objectives = ['Electricity:Facility','DistrictCooling:Facility', 'DistrictHeating:Facility']\n",
-    "besos_problem = EPProblem(parameters, objectives)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c6be211eb845416c9f3c32bd58daa9cb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Executing', max=4.0, style=ProgressStyle(description_widt…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n"
+      "Electricity:Facility  ::  1603.62 kWh\n",
+      "DistrictCooling:Facility  ::  103.60 kWh\n",
+      "DistrictHeating:Facility  ::  6421.32 kWh\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Electricity:Facility</th>\n",
-       "      <th>DistrictCooling:Facility</th>\n",
-       "      <th>DistrictHeating:Facility</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5.691270e+09</td>\n",
-       "      <td>1.278309e+09</td>\n",
-       "      <td>2.052586e+10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>5.687283e+09</td>\n",
-       "      <td>1.878403e+09</td>\n",
-       "      <td>2.057794e+10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>5.685346e+09</td>\n",
-       "      <td>1.076052e+09</td>\n",
-       "      <td>2.085595e+10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>5.692108e+09</td>\n",
-       "      <td>1.656532e+09</td>\n",
-       "      <td>2.280406e+10</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Electricity:Facility  DistrictCooling:Facility  DistrictHeating:Facility\n",
-       "0          5.691270e+09              1.278309e+09              2.052586e+10\n",
-       "1          5.687283e+09              1.878403e+09              2.057794e+10\n",
-       "2          5.685346e+09              1.076052e+09              2.085595e+10\n",
-       "3          5.692108e+09              1.656532e+09              2.280406e+10"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "evaluator = EvaluatorEP(besos_problem, building, out_dir='outputdir', err_dir='outputdir') # outputdir must exist; E+ files will be written there\n",
-    "runs = pd.DataFrame.from_dict({'0': [0],'1':[90],'2':[180],'3':[270]}, orient='index') # Make a dataframe of runs with different oriantation\n",
-    "outputs = evaluator.df_apply(runs) # Run this as a test,\n",
-    "outputs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Electricity:Facility</th>\n",
-       "      <th>DistrictCooling:Facility</th>\n",
-       "      <th>DistrictHeating:Facility</th>\n",
-       "      <th>Total</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5.691270e+09</td>\n",
-       "      <td>1.278309e+09</td>\n",
-       "      <td>2.052586e+10</td>\n",
-       "      <td>2.749544e+10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>5.687283e+09</td>\n",
-       "      <td>1.878403e+09</td>\n",
-       "      <td>2.057794e+10</td>\n",
-       "      <td>2.814363e+10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>5.685346e+09</td>\n",
-       "      <td>1.076052e+09</td>\n",
-       "      <td>2.085595e+10</td>\n",
-       "      <td>2.761735e+10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>5.692108e+09</td>\n",
-       "      <td>1.656532e+09</td>\n",
-       "      <td>2.280406e+10</td>\n",
-       "      <td>3.015270e+10</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Electricity:Facility  DistrictCooling:Facility  DistrictHeating:Facility  \\\n",
-       "0          5.691270e+09              1.278309e+09              2.052586e+10   \n",
-       "1          5.687283e+09              1.878403e+09              2.057794e+10   \n",
-       "2          5.685346e+09              1.076052e+09              2.085595e+10   \n",
-       "3          5.692108e+09              1.656532e+09              2.280406e+10   \n",
-       "\n",
-       "          Total  \n",
-       "0  2.749544e+10  \n",
-       "1  2.814363e+10  \n",
-       "2  2.761735e+10  \n",
-       "3  3.015270e+10  "
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "outputs['Total'] = 0\n",
-    "outputs['Total'] = outputs.sum(axis=1)  # axis = 0 is the default sum rows\n",
-    "outputs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Electricity:Facility</th>\n",
-       "      <th>DistrictCooling:Facility</th>\n",
-       "      <th>DistrictHeating:Facility</th>\n",
-       "      <th>Total</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5.691270e+09</td>\n",
-       "      <td>1.278309e+09</td>\n",
-       "      <td>2.052586e+10</td>\n",
-       "      <td>2.749544e+10</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Electricity:Facility  DistrictCooling:Facility  DistrictHeating:Facility  \\\n",
-       "0          5.691270e+09              1.278309e+09              2.052586e+10   \n",
-       "\n",
-       "          Total  \n",
-       "0  2.749544e+10  "
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "outputs[outputs['Total']==outputs['Total'].min()]"
+    "# Objectives of our problem which is to minimize the TOTAL COMSUMPTION\n",
+    "objectives = ['Electricity:Facility','DistrictCooling:Facility', 'DistrictHeating:Facility']\n",
+    "\n",
+    "# problem = parameters + objectives\n",
+    "besos_problem = EPProblem(parameters, objectives)\n",
+    "\n",
+    "# EPProblem vs EvaluatorEP = problem + building\n",
+    "evaluator = EvaluatorEP(besos_problem, building, out_dir='outputdir', err_dir='outputdir') \n",
+    "\n",
+    "\n",
+    "result = evaluator([0, 0.5, 0.0792]) \n",
+    "values = dict(zip(objectives, result))\n",
+    "for key, value in values.items():\n",
+    "    print(key, \" :: \", \"{0:.2f}\".format(value/3.6e6), \"kWh\")"
    ]
   },
   {
@@ -341,9 +146,44 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "# the north axis = 0 is the best oriantation of the building"
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
