--- a/Optimization/opt_fixed_data.ipynb
+++ b/Optimization/opt_fixed_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>270</td>\n",
+       "      <td>90</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.5</td>\n",
@@ -56,13 +56,13 @@
       ],
       "text/plain": [
        "   Orientation  Ventilation  Shading  Insulation Thickness  \\\n",
-       "0          270            0        0                   0.5   \n",
+       "0           90            0        0                   0.5   \n",
        "\n",
        "   Window to Wall Ratio  \n",
        "0                   0.1  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,6 +84,7 @@
     "from seaborn import pairplot\n",
     "import numpy as np\n",
     "\n",
+    "# this note book purpouse is just for plotting different type of buildings no insulation medium and high\n",
     "# Open the IDF file\n",
     "idf_1 = \"/home/ict4bd/Desktop/ict4building/DesignBuilderModel/1_layer_window.idf\"\n",
     "idf_2 = \"/home/ict4bd/Desktop/ict4building/DesignBuilderModel/2_layer_window.idf\"\n",
@@ -91,7 +92,7 @@
     "weather_file = '/home/ict4bd/Desktop/ict4building/Requirements/CHE_Geneva.067000_IWEC/CHE_Geneva.067000_IWEC.epw'\n",
     "## Set up evaluator\n",
     "# Load Building\n",
-    "building = ef.get_building(idf_3)\n",
+    "building = ef.get_building(idf_1)\n",
     "\n",
     "# Parameter Space\n",
     "parameters = []\n",
@@ -108,8 +109,6 @@
     "\n",
     "ventilation = FieldSelector(class_name='ZoneVentilation:DesignFlowRate',field_name='Design Flow Rate')\n",
     "ventilation_descriptor = CategoryParameter(options=[0, 0.12])\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "parameters.append(Parameter(selector=orientation, \n",
@@ -140,12 +139,13 @@
     "evaluator = EvaluatorEP(besos_problem, building, out_dir='outputdir_reg', err_dir='outputdir_reg', epw_file=weather_file) \n",
     "\n",
     "samples_temp = []\n",
+    "\n",
     "'''\n",
     "orientation_values = [0,90,180,270] \n",
-    "wwr_values = [.15, .5, .9] \n",
+    "wwr_values = np.linspace(0.11,0.89,5)\n",
     "ventilation_values = [0, 0.12] \n",
-    "tickness_values = np.linspace(0.01,0.5,5)\n",
-    "shading = np.linspace(5,25,6)\n",
+    "tickness_values = [0.011, 0.112, 0.479]\n",
+    "shading = np.linspace(10,26,3)\n",
     "for ori in orientation_values:\n",
     "    for wwr_ in wwr_values:\n",
     "        for vent in ventilation_values:\n",
@@ -155,26 +155,42 @@
     "                                         'Ventilation': vent,\n",
     "                                         'Shading': shade,\n",
     "                                         'Insulation Thickness': tickness,\n",
-    "                                         'Window to Wall Ratio': wwr_,})\n",
+    "                                         'Window to Wall Ratio': wwr_})\n",
+    "samples = pd.DataFrame.from_dict(samples_temp)\n",
     "'''\n",
-    "samples_temp.append({'Orientation': 270,\n",
-    "                     'Ventilation': 0,\n",
-    "                     'Shading': 0,\n",
-    "                     'Insulation Thickness': 0.5,\n",
-    "                     'Window to Wall Ratio': 0.1,})\n",
+    "\n",
+    "# Window u value are fixed and predefined in Design builder \n",
+    "# 0.78 for 3 layer window\n",
+    "# 1.46 for 2 layer window \n",
+    "# 2.91 for 1 layer window\n",
+    "\n",
+    "# for the plots we can simulate \n",
+    "# 0.0676 \t0.479583 for high insulation\n",
+    "# 0.2509 \t0.112083 medium insulation\n",
+    "# 1.0171 \t0.010000 no insulation\n",
+    "\n",
+    "# shading setpoint < 12 is shading always on \n",
+    "# shading setpoint > 26 is always off because cooling starts @ 25\n",
+    "\n",
+    "\n",
+    "samples_temp.append({'Orientation': 90,\n",
+    "                    'Ventilation': 0,\n",
+    "                    'Shading': 0,\n",
+    "                    'Insulation Thickness': 0.5,\n",
+    "                    'Window to Wall Ratio': 0.1})\n",
     "samples = pd.DataFrame.from_dict(samples_temp)\n",
     "samples"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64aceecb6c0046d6bc2b38257f40c555",
+       "model_id": "ae8d28eb5f824173862e537b5f081200",
        "version_major": 2,
        "version_minor": 0
       },
@@ -200,7 +216,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Q is kWh / m2\n",
+    "total_area= 0\n",
+    "for Zones in building.idfobjects[\"Zone\"]:\n",
+    "    total_area += float(Zones.checkrange(\"Floor_Area\")) \n",
+    "\n",
+    "outputs['total (Q)'] = outputs[objectives].sum(axis=1) /3.6e6 /total_area \n",
+    "outputs.to_csv(\"demo.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -238,15 +269,15 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>270</td>\n",
+       "      <td>90</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0.5</td>\n",
        "      <td>0.1</td>\n",
-       "      <td>5.773012e+09</td>\n",
+       "      <td>5.773029e+09</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.308721e+10</td>\n",
-       "      <td>111.790961</td>\n",
+       "      <td>1.338887e+10</td>\n",
+       "      <td>113.579148</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -254,27 +285,22 @@
       ],
       "text/plain": [
        "   Orientation  Ventilation  Shading  Insulation Thickness  \\\n",
-       "0          270            0        0                   0.5   \n",
+       "0           90            0        0                   0.5   \n",
        "\n",
        "   Window to Wall Ratio  Electricity:Facility  DistrictCooling:Facility  \\\n",
-       "0                   0.1          5.773012e+09                       0.0   \n",
+       "0                   0.1          5.773029e+09                       0.0   \n",
        "\n",
        "   DistrictHeating:Facility   total (Q)  \n",
-       "0              1.308721e+10  111.790961  "
+       "0              1.338887e+10  113.579148  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Q is kWh / m2\n",
-    "total_area= 0\n",
-    "for Zones in building.idfobjects[\"Zone\"]:\n",
-    "    total_area += float(Zones.checkrange(\"Floor_Area\")) \n",
-    "outputs['total (Q)'] = outputs[objectives].sum(axis=1) /3.6e6 /total_area \n",
-    "outputs[outputs['total (Q)']==outputs['total (Q)'].min()]"
+    "outputs"
    ]
   },
   {
